# OctoPrint-FirmwareCheck

./: .git-blame-ignore-revs  .pre-commit-config.yaml  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci-cd-pipeline.yml  publish-to-test-pypi.yml
octoprint_firmware_check/: __init__.py
octoprint_firmware_check/checks/: __init__.py  firmware_broken.py  firmware_development.py  firmware_hostcommands.py  firmware_unsafe.py
octoprint_firmware_check/static/clientjs/: firmware_check.js
octoprint_firmware_check/static/css/: firmware_check.css
octoprint_firmware_check/static/js/: firmware_check.js
octoprint_firmware_check/static/less/: firmware_check.less
octoprint_firmware_check/templates/: firmware_check_settings.jinja2  firmware_check_sidebar_info.jinja2  firmware_check_sidebar_warning.jinja2
octoprint_firmware_check/translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/: messages.pot
